--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/my/groups/{id:guid}/venues/new"
+﻿@page "/my/groups/{id:guid}/events/venues/new"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @model CreateModel
