--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/my/groups/{id:guid}/venues"
+﻿@page "/my/groups/{id:guid}/events/venues"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Venues
