--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Web.Razor.Models.Admin.Members
 @model SubscriptionCreateAdminPageViewModel
 
+<h2>Create subscription</h2>
 <form method="post">
     @Html.AntiForgeryToken()
     @await Html.PartialAsync("Admin/Members/_SubscriptionForm", new SubscriptionFormViewModel
