--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -28,6 +28,7 @@
 @import "_overlay";
 @import "_paragraphs";
 @import "_sections";
+@import "_side-menu";
 @import "_sidebar";
 @import "_social-media";
 @import "_tabs";
