--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12416,6 +12416,26 @@ html[data-platform=odk] {
   margin-bottom: 3rem;
 }
 
+.side-menu {
+  --odk-side-menu-color: var(--bs-secondary-color);
+  position: sticky;
+  top: 0;
+  list-style: none;
+  padding: 0;
+}
+.side-menu .nav-link {
+  color: var(--odk-side-menu-color);
+  border-left: 0.125rem solid transparent;
+  padding: 0.125rem 0 0.125rem 0.75rem;
+}
+.side-menu .nav-link.active, .side-menu .nav-link:hover {
+  --odk-side-menu-color: var(--bs-emphasis-color);
+  border-left-color: var(--odk-side-menu-color);
+}
+.side-menu .side-menu {
+  padding-left: 1rem;
+}
+
 .sidebar-card {
   margin-bottom: 1rem;
 }
