--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Venue.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Venue.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/my/groups/{id:guid}/venues/{venueId:guid}"
+﻿@page "/my/groups/{id:guid}/events/venues/{venueId:guid}"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Venues
