--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupMenu.cshtml
@@ -25,7 +25,7 @@
 
     if (Model.IsAdmin)
     {
-        menuItems.Add(new MenuItem { Text = "Manage", Link = OdkRoutes2.MemberGroups.Group(Model.Chapter.Id) });
+        menuItems.Add(new MenuItem { Text = "Manage", Link = OdkRoutes2.MemberGroups.Group(Model.Platform, Model.Chapter) });
     }
 
     var id = "nav-group";
