--- a/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/my/groups/{id:guid}/events/{eventId:guid}"
 @using ODK.Services.Events
-@model ODK.Web.Razor.Pages.My.Groups.Events.EventModel
+@model IndexModel
 @inject IEventAdminService EventAdminService
 @{
     Layout = "_GroupAdminLayout";
