--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
@@ -2,7 +2,7 @@
 @using ODK.Web.Razor.Models.Admin.Events
 @model VenueAdminTabsViewModel
 
-<ul class="nav nav-tabs my-3">
+<ul class="nav nav-underline my-3">
     <li class="nav-item">
         <a class="nav-link" data-menu-link="exact" href="@OdkRoutes2.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">Edit</a>
     </li>
