--- a/ODK.Web.Razor/Pages/My/Groups/Events/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Create.cshtml
@@ -1,7 +1,5 @@
 ﻿@page "/my/groups/{id:guid}/events/new"
-@using ODK.Core.Utils
 @using ODK.Services.Events
-@using ODK.Web.Razor.Models.Admin.Events
 @model CreateModel
 @inject IEventAdminService EventAdminService
 @{
@@ -9,37 +7,6 @@
     Model.Title = "Create event";
     
     var viewModel = await EventAdminService.GetEventCreateViewModel(Model.AdminServiceRequest);
-
-    var hostOptions = viewModel.AdminMembers
-        .Select(x => new SelectListItem
-        {
-            Value = x.MemberId.ToString(),
-            Text = x.Member.FullName
-        })
-        .ToArray();
 }
 
-<h2>Create event</h2>
-
-<form method="post">
-    @Html.AntiForgeryToken()
-    
-    @await Html.PartialAsync("Admin/Events/_EventForm", new EventFormViewModel
-    {
-        Chapter = viewModel.Chapter,
-        CurrencySymbol = viewModel.PaymentSettings?.Currency.Symbol,
-        Date = viewModel.Date,
-        Description = viewModel.EventSettings?.DefaultDescription,
-        EndTime = TimeSpanUtils.ToString(viewModel.EventSettings?.DefaultEndTime),
-        HostOptions = hostOptions,
-        OwnerSubscription = viewModel.OwnerSubscription,
-        Platform = viewModel.Platform,
-        Venue = Model.VenueId ?? default,
-        Venues = viewModel.Venues
-    })
-    
-    <div class="button-container">
-        <button type="submit" class="btn btn-primary">Create</button>
-        <button type="submit" class="btn btn-secondary" name="draft" value="true">Save as draft</button>
-    </div>
-</form>
+@await Html.PartialAsync("Admin/Events/_EventCreateContent", viewModel.Chapter)
