--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Create.cshtml
@@ -1,11 +1,15 @@
 ﻿@page "/my/groups/{id:guid}/events/venues/new"
+@using ODK.Services.Chapters
 @model CreateModel
+@inject IChapterAdminService ChapterAdminService
 @{
     Layout = "_GroupAdminLayout";
     Model.Title = "Create venue";
+
+    var chapter = await ChapterAdminService.GetChapter(Model.AdminServiceRequest);
 }
 
-@await Html.PartialAsync("Admin/Venues/_VenueCreateContent")
+@await Html.PartialAsync("Admin/Venues/_VenueCreateContent", chapter)
 
 @section scripts
 {
