--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -1,7 +1,9 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services
 @using ODK.Services.Events
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Events
 @using ODK.Web.Razor.Models.Components
 @model ODK.Core.Chapters.Chapter
@@ -19,6 +21,19 @@
         })
         .ToArray();
 }
+
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
+{
+    Breadcrumbs = new[]
+    {
+        new MenuItem
+        {
+            Link = OdkRoutes2.MemberGroups.Events(viewModel.Platform, Model),
+            Text = "Events"
+        },
+        new MenuItem { Text = "New" }
+    }
+})
 
 <h2>Create event</h2>
 
