--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
@@ -6,6 +6,8 @@
 @using ODK.Web.Razor.Models.Admin.Members
 @model MemberAdminPageViewModel
 
+@await Html.PartialAsync("Admin/Members/_MemberBreadcrumbs", Model)
+
 @await Html.PartialAsync("Admin/Members/_MemberAdminTabs", new MemberAdminTabsViewModel
 {
     Chapter = Model.Chapter,
