--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
@@ -11,6 +11,8 @@
         .OrderByDescending(x => x.Date);
 }
 
+@await Html.PartialAsync("Admin/Members/_MemberBreadcrumbs", Model)
+
 @await Html.PartialAsync("Admin/Members/_MemberAdminTabs", new MemberAdminTabsViewModel
 {
     Chapter = Model.Chapter,
