--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
@@ -1,10 +1,24 @@
 ﻿@using ODK.Services.Venues.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Events
 @using ODK.Web.Razor.Models.Admin.Venues
+@using ODK.Web.Razor.Models.Components
 @model VenueAdminPageViewModel
 
-<h2>@Model.Venue.Name</h2>
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
+{
+    Breadcrumbs = new[]
+    {
+        new MenuItem
+        {
+            Link = OdkRoutes2.MemberGroups.Venues(Model.Platform, Model.Chapter),
+            Text = "Venues"
+        },
+        new MenuItem { Text = Model.Venue.Name }
+    }
+})
 
 @await Html.PartialAsync("Admin/Venues/_VenueAdminTabs", new VenueAdminTabsViewModel
 {
