--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -23,6 +23,10 @@
             Children = new[]
             {
                 new MenuItem { Link = OdkRoutes2.MemberGroups.GroupQuestions(platform, chapter), Text = "FAQ" },
+                new MenuItem { Link = OdkRoutes2.MemberGroups.GroupMessages(platform, chapter), Text = "Messages" },
+                new MenuItem { Link = OdkRoutes2.MemberGroups.GroupPrivacy(platform, chapter), Text = "Privacy" },
+                new MenuItem { Link = OdkRoutes2.MemberGroups.GroupProperties(platform, chapter), Text = "Properties" },
+                new MenuItem { Link = OdkRoutes2.MemberGroups.GroupSocialMedia(platform, chapter), Text = "Social media" },
                 new MenuItem { Link = OdkRoutes2.MemberGroups.GroupTexts(platform, chapter), Text = "Texts" }
             }
         },
