--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -56,6 +56,7 @@
             Children = new[]
             {
                 new MenuItem { Link = OdkRoutes2.MemberGroups.MemberAdmins(platform, chapter), Text = "Admins" },
+                new MenuItem { Link = OdkRoutes2.MemberGroups.MembershipSettings(platform, chapter), Text = "Membership" },
                 new MenuItem 
                 { 
                     Link = OdkRoutes2.MemberGroups.MembersSubscriptions(platform, chapter), 
