--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
@@ -15,7 +15,7 @@
     var dto = await ChapterService.GetChapterMemberSubscriptionsDto(memberId, Model.Chapter);
     
     var (memberSubscription, chapterSubscriptions, paymentSettings, currency) = 
-        (dto.MemberSubscription, dto.ChapterSubscriptions, dto.PaymentSettings, dto.PaymentSettings.Currency);
+        (dto.MemberSubscription, dto.ChapterSubscriptions, dto.PaymentSettings, dto.PaymentSettings?.Currency);
     
     if (memberSubscription == null)
     {
@@ -65,7 +65,7 @@
                 </div>
                 <div>
                     <button class="btn btn-primary mr-1" data-bs-toggle="modal" data-bs-target="#@modalId">Purchase</button>
-                    <span>@currency.ToAmountString(chapterSubscription.Amount)</span>
+                    <span>@currency?.ToAmountString(chapterSubscription.Amount)</span>
                     
                     @await Html.PartialAsync("Payments/_PaymentModal", new PaymentModalViewModel
                     {
@@ -92,8 +92,8 @@
 
 @await Html.PartialAsync("Payments/_PaymentScripts", new PaymentScriptsViewModel
 {
-    ApiPublicKey = paymentSettings.ApiPublicKey ?? "",
-    CurrencyCode = paymentSettings.Currency.Code,
+    ApiPublicKey = paymentSettings?.ApiPublicKey ?? "",
+    CurrencyCode = paymentSettings?.Currency.Code ?? "",
     IsSubscription = false,
-    Provider = paymentSettings.Provider ?? default
+    Provider = paymentSettings?.Provider ?? default
 })
