--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -1,19 +1,15 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services
 @using ODK.Services.Events
+@using ODK.Services.Events.ViewModels
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Events
 @using ODK.Web.Razor.Models.Components
-@model ODK.Core.Chapters.Chapter
-@inject IEventAdminService EventAdminService
+@model EventCreateAdminPageViewModel
 @{
-    var memberId = User.MemberId();
-    var request = new AdminServiceRequest(Model.Id, memberId);    
-    var viewModel = await EventAdminService.GetEventCreateViewModel(request);
-
-    var hostOptions = viewModel.AdminMembers
+    var hostOptions = Model.AdminMembers
         .Select(x => new SelectListItem
         {
             Value = x.MemberId.ToString(),
@@ -28,7 +24,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Events(viewModel.Platform, Model),
+            Link = OdkRoutes2.MemberGroups.Events(Model.Platform, Model.Chapter),
             Text = "Events"
         },
         new MenuItem { Text = "New" }
@@ -37,29 +33,23 @@
 
 <h2>Create event</h2>
 
-<form method="post" action="/@Model.Name/Admin/Events/Create">
+<form method="post">
     @Html.AntiForgeryToken()
     
     @await Html.PartialAsync("Admin/Events/_EventForm", new EventFormViewModel
     {
-        Chapter = viewModel.Chapter,
-        CurrencySymbol = viewModel.PaymentSettings?.Currency.Symbol,
-        Date = viewModel.Date,
-        Description = viewModel.EventSettings?.DefaultDescription,
-        EndTime = TimeSpanUtils.ToString(viewModel.EventSettings?.DefaultEndTime),
+        Chapter = Model.Chapter,
+        Date = Model.Date,
+        Description = Model.EventSettings?.DefaultDescription,
+        EndTime = TimeSpanUtils.ToString(Model.EventSettings?.DefaultEndTime),
         HostOptions = hostOptions,
-        OwnerSubscription = viewModel.OwnerSubscription,
-        Platform = viewModel.Platform,
-        Venues = viewModel.Venues
+        OwnerSubscription = Model.OwnerSubscription,
+        Platform = Model.Platform,
+        Venues = Model.Venues
     })
     
     <div class="button-container">
         <button type="submit" class="btn btn-primary">Create</button>
         <button type="submit" class="btn btn-secondary" name="draft" value="true">Save as draft</button>
-        @await Html.PartialAsync("Components/_FeatureTooltip",
-            new FeatureTooltipViewModel
-            {
-                Name = "Events.SaveDraft"
-            })
     </div>
 </form>
