--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Core.Members
+﻿@using ODK.Core.Features
+@using ODK.Core.Members
 @using ODK.Services.Members.ViewModels
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
@@ -20,12 +21,20 @@
 })
 
 <h2>Create subscription</h2>
-<form method="post">
-    @Html.AntiForgeryToken()
-    @await Html.PartialAsync("Admin/Members/_SubscriptionForm", new SubscriptionFormViewModel
-    {
-        PaymentSettings = Model.PaymentSettings,
-        Type = SubscriptionType.Full    
-    })
-    <button class="btn btn-primary">Create</button>
-</form>
+
+@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
+{
+    Feature = SiteFeatureType.MemberSubscriptions,
+    ContentFunc = 
+        @<div>            
+            <form method="post">
+                @Html.AntiForgeryToken()
+                @await Html.PartialAsync("Admin/Members/_SubscriptionForm", new SubscriptionFormViewModel
+                {
+                    PaymentSettings = Model.PaymentSettings,
+                    Type = SubscriptionType.Full    
+                })
+                <button class="btn btn-primary">Create</button>
+            </form>
+        </div>
+})
