--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
@@ -10,31 +10,28 @@
 }
 
 <div class="form-group mb-3 required">
-    @Html.LabelFor(x => x.Name, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", "How to refer to this subscription in the system")
-    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.Name)
-</div>
-
-<div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Type, new { @class = "form-label" })
     @Html.DropDownListFor(x => x.Type, typeOptions, new { @class = "form-select" })
     @Html.ValidationMessageFor(x => x.Type)
 </div>
 
 <div class="form-group mb-3 required">
+    @Html.LabelFor(x => x.Name, new { @class = "form-label" })
+    <span class="ms-1 text-muted">How to refer to this subscription in the system</span>
+    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Name)
+</div>
+
+<div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Title, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_Tooltip", "Short title visible to members")
+    <span class="ms-1 text-muted">Short title visible to members</span>
     @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.Title)
 </div>
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Amount, new { @class = "form-label" })
-    <div class="input-group mb-3">
-        <span class="input-group-text">@Model.PaymentSettings?.Currency.Symbol</span>
-        @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.01 })
-    </div>
+    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.5 })
     @Html.ValidationMessageFor(x => x.Amount)
 </div>
 
