--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Chapters
 @using ODK.Core.Countries
+@using ODK.Core.Features
 @using ODK.Services
 @using ODK.Services.Chapters
 @using ODK.Services.Countries
@@ -8,61 +9,65 @@
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Members
+@using ODK.Web.Razor.Models.Components
 @model SubscriptionsAdminPageViewModel
 @{        
-    var (subscriptions, currency, membershipSettings) = (Model.ChapterSubscriptions, Model.PaymentSettings.Currency, Model.MembershipSettings);
+    var (subscriptions, currency, membershipSettings) = 
+        (Model.ChapterSubscriptions, Model.PaymentSettings?.Currency, Model.MembershipSettings);
 }
 
 <h2>Subscriptions</h2>
-<p>
-    <a href="@OdkRoutes2.MemberGroups.MembersSubscriptionCreate(Model.Platform, Model.Chapter)" class="btn btn-primary">
-        Create subscription
-    </a>
-</p>
 
-<table class="table table-striped mb-5">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Amount</th>
-        <th>Months</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var subscription in subscriptions)
-    {
-        <tr>
-            <td>
-                <a href="@OdkRoutes2.MemberGroups.MembersSubscription(Model.Platform, Model.Chapter, subscription)">@subscription.Name</a>
-            </td>
-            <td>
-                @currency.Symbol@subscription.Amount
-            </td>
-            <td>@subscription.Months</td>
-            <td>
-                <form method="post" action="/groups/@Model.Chapter.Id/members/subscriptions/@subscription.Id/delete">
-                    <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
-                            onclick="return confirm('Are you sure you want to delete this subscription?');">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </form>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+@await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
+{
+    Feature = SiteFeatureType.MemberSubscriptions,
+    ContentFunc = 
+        @<div>
+            @if (Model.MembershipSettings?.Enabled != true)
+            {
+                <div class="alert alert-warning">
+                    Membership is currently disabled. 
+                    <a href="@OdkRoutes2.MemberGroups.MembershipSettings(Model.Platform, Model.Chapter)">Update membership settings</a>
+                </div>
+            }
 
-<h3>Membership settings</h3>
+            <p>
+                <a href="@OdkRoutes2.MemberGroups.MembersSubscriptionCreate(Model.Platform, Model.Chapter)" class="btn btn-primary">
+                    Create subscription
+                </a>
+            </p>
 
-<form method="post">
-    @Html.AntiForgeryToken()
-    @await Html.PartialAsync("Admin/Members/_MembershipSettingsForm", new MembershipSettingsFormViewModel
-    {
-        Enabled = membershipSettings?.Enabled ?? false,
-        MembershipDisabledAfter = membershipSettings?.MembershipDisabledAfterDaysExpired ?? 0,
-        MembershipExpiringWarningDays = membershipSettings?.MembershipExpiringWarningDays ?? 0,
-        TrialPeriodMonths = membershipSettings?.TrialPeriodMonths ?? 0
-    })
-    <button class="btn btn-primary">Update</button>
-</form>
+            <table class="table table-striped mb-5">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Amount</th>
+                    <th>Months</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var subscription in subscriptions)
+                {
+                    <tr>
+                        <td>
+                            <a href="@OdkRoutes2.MemberGroups.MembersSubscription(Model.Platform, Model.Chapter, subscription)">@subscription.Name</a>
+                        </td>
+                        <td>
+                            @currency?.ToAmountString(subscription.Amount)
+                        </td>
+                        <td>@subscription.Months</td>
+                        <td>
+                            <form method="post" action="/groups/@Model.Chapter.Id/members/subscriptions/@subscription.Id/delete">
+                                <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
+                                        onclick="return confirm('Are you sure you want to delete this subscription?');">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>            
+        </div>
+})
