--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -44,6 +44,7 @@
         EndTime = TimeSpanUtils.ToString(Model.EventSettings?.DefaultEndTime),
         HostOptions = hostOptions,
         OwnerSubscription = Model.OwnerSubscription,
+        PaymentSettings = Model.PaymentSettings,
         Platform = Model.Platform,
         Venues = Model.Venues
     })
