--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -95,11 +95,6 @@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.AttendeeLimit, new { @class = "form-label" })
-    @await Html.PartialAsync("Components/_FeatureTooltip", 
-        new FeatureTooltipViewModel 
-        {
-            Name = "Events.AttendeeLimit"
-        })
     @await Html.PartialAsync("Components/_Tooltip", 
         "Limit how many members can attend this event. For ticketed events this limits how many tickets can be bought.")
     @Html.TextBoxFor(x => x.AttendeeLimit, new { @class = "form-control", type = "number" })
@@ -110,25 +105,37 @@
     <legend>
         Tickets
     </legend>
-    <div class="form-group mb-3">
-        @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
-        <span class="ms-1 text-muted">The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.</span>
-        @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
-        @Html.ValidationMessageFor(x => x.TicketCost)
-    </div>
 
-    <div class="form-group mb-3">
-        @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
-        <span class="ms-1 text-muted">The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.</span>
-        <div class="input-group">
-            @if (Model.CurrencySymbol != null)
-            {
-                <span class="input-group-text">
-                    @Model.CurrencySymbol
-                </span>
-            }
-            @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+    @if (Model.TicketsEnabled && Model.PaymentSettings == null)
+    {
+        <div class="alert alert-warning">
+            You must update your
+            <a href="@OdkRoutes2.MemberGroups.GroupPayments(Model.Platform, Model.Chapter)">payment settings</a>
+            before you can create ticketed events
         </div>
-        @Html.ValidationMessageFor(x => x.TicketDepositCost)
-    </div>
+    }
+    else
+    {
+        <div class="form-group mb-3">
+            @Html.LabelFor(x => x.TicketCost, new { @class = "form-label" })
+            <span class="ms-1 text-muted">The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.</span>
+            @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
+            @Html.ValidationMessageFor(x => x.TicketCost)
+        </div>
+
+        <div class="form-group mb-3">
+            @Html.LabelFor(x => x.TicketDepositCost, new { @class = "form-label" })
+            <span class="ms-1 text-muted">The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.</span>
+            <div class="input-group">
+                @if (Model.PaymentSettings?.Currency != null)
+                {
+                    <span class="input-group-text">
+                        @Model.PaymentSettings.Currency.Symbol
+                    </span>
+                }
+                @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", type = "number", step = 0.5 })
+            </div>
+            @Html.ValidationMessageFor(x => x.TicketDepositCost)
+        </div>
+    }    
 </fieldset>
